@@ -108,6 +108,11 @@ Updated Italian translation (Ivo Neri)
 
 Fixed a bug which made it difficult to see text that was being edited in a table.
 
+2092902: Focus remains on hidden session window for Alt-Arrow.  Removed code which was a 
+work-around for a bug in java 1.3, that has since been fixed and was actually producing a 
+bug seen in java5 and java6, where the Alt-RightArrow key shortcut switched session windows 
+into the foreground without giving them focus.
+
 2049336: Make Editable disappear from SQL/results tab
 
 2018512: DB2 timestamps still don't work when milliseconds are zero. Patch submitted by Daniel Stränger.
